<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back"
        android:orientation="vertical">

        <TextView
            android:id="@+id/can1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="200dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:background="#FFFFFF"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/can1"
            android:textColor="#009688"
            android:textColorHighlight="#009688"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/can2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:background="#FFFFFF"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/can2"
            android:textColor="#009688"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/can3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="#FFFFFF"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/can3"
            android:textColor="#009688"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:onClick="Votingcan"
            android:text="@string/voteNow"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>